[project]
name = "aganitha-pubmed"
version = "0.1.0"
description = "Python program to fetch research papers from PubMed"
authors = [
    {name = "Asritha"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
